tests/baselines/reference/publicIndexer.errors.txt
tests/cases/conformance/classes/indexMemberDeclarations/publicIndexer.ts(4,5): error TS1071: 'public' modifier cannot appear on an index signature.
tests/cases/conformance/classes/indexMemberDeclarations/publicIndexer.ts(8,5): error TS1071: 'public' modifier cannot appear on an index signature.
tests/cases/conformance/classes/indexMemberDeclarations/publicIndexer.ts(12,5): error TS1071: 'public' modifier cannot appear on an index signature.


==== tests/cases/conformance/classes/indexMemberDeclarations/publicIndexer.ts (3 errors) ====
    // public indexers not allowed
    
    class C {
        public [x: string]: string;
        ~~~~~~
!!! error TS1071: 'public' modifier cannot appear on an index signature.
    }
    
    class D {
        public [x: number]: string;
        ~~~~~~
!!! error TS1071: 'public' modifier cannot appear on an index signature.
    }
    
    class E<T> {
        public [x: string]: T;
        ~~~~~~
!!! error TS1071: 'public' modifier cannot appear on an index signature.
    }